fixed for opening resourcepack path on Windows(IDK how to mixin optifine so...）